# socm-text-embedding

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: C.ipynb  avg_cos.ipynb  corr_task_performance.ipynb  lambda.ipynb  other_visualizations.ipynb  qualitative_analysis.ipynb  quantitative_analysis.ipynb  r.ipynb  scatter_dmu_dsigma.ipynb  token_concentration.ipynb
scripts/: calc_C.sh  calc_avg_cos.sh  calc_lambda.sh  calc_last_token_concentration.sh  calc_r.sh  calc_socm.sh  calc_token_concentration.sh  run_mteb.sh
scripts/data/: make_hard_negatives_dataset.sh  make_msmarco_dataset.sh  make_wiki_dataset.sh
src/: calc_C.py  calc_avg_cos.py  calc_lambda.py  calc_last_token_concentration.py  calc_r.py  calc_socm_hard_negative.py  calc_socm_pairwise.py  calc_token_concentration.py  run_mteb.py
src/data/: make_hard_negatives_dataset.py  make_msmarco_dataset.py  make_wiki_dataset.py
src/utils/: distance.py  mylogging.py  normalize.py  pooling.py  seed.py  socm.py
tests/: test_distance.py  test_normalize.py  test_pooling.py
