[project]
name = "socm-text-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "datasets>=3.6.0",
    "einops>=0.8.2",
    "mteb==2.7.26",
    "numpy==2.4.2",
    "pytest>=8.4.1",
    "huggingface-hub==1.4.1",
    "sentence-transformers==5.2.2",
    "torch==2.8.0",
    "transformers==5.1.0",
    "polars>=1.38.1",
    "ipykernel>=7.2.0",
    "plotly>=6.8.0",
    "kaleido>=1.3.0",
    "nbformat>=4.2.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black[jupyter]>=26.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/data", "src/utils"]
sources = ["src"]
